--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
+    "preserveSymlinks": true,
     "target": "es2015",
     "lib": [
       "es2018",
